--- a/package.json
+++ b/package.json
@@ -1,55 +1,70 @@
 {
-  "name": "website",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.48",
-    "@types/react": "^16.14.24",
-    "@types/react-dom": "^16.9.14",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "website",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https://stephan-mdd.github.io",
+	"dependencies": {
+		"@fontsource/orbitron": "^4.5.6",
+		"@fontsource/roboto": "^4.5.5",
+		"@fortawesome/fontawesome-svg-core": "^6.1.1",
+		"@fortawesome/free-brands-svg-icons": "^6.1.1",
+		"@fortawesome/free-solid-svg-icons": "^6.1.1",
+		"@fortawesome/react-fontawesome": "^0.1.18",
+		"add": "^2.0.6",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-router-dom": "6",
+		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.5",
+		"typescript": "^4.6.3",
+		"web-vitals": "^0.2.4",
+		"workbox-background-sync": "^5.1.4",
+		"workbox-broadcast-update": "^5.1.4",
+		"workbox-cacheable-response": "^5.1.4",
+		"workbox-core": "^5.1.4",
+		"workbox-expiration": "^5.1.4",
+		"workbox-google-analytics": "^5.1.4",
+		"workbox-navigation-preload": "^5.1.4",
+		"workbox-precaching": "^5.1.4",
+		"workbox-range-requests": "^5.1.4",
+		"workbox-routing": "^5.1.4",
+		"workbox-strategies": "^5.1.4",
+		"workbox-streams": "^5.1.4",
+		"yarn": "^1.22.18"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"@types/jest": "^26.0.24",
+		"@types/node": "^12.20.48",
+		"@types/react": "^18.0.5",
+		"@types/react-dom": "^18.0.0",
+		"@types/styled-components": "^5.1.25",
+		"gh-pages": "^3.2.3"
+	}
 }
